PPJ/brojevi/parser.output
State 5 conflicts: 1 reduce/reduce
State 18 conflicts: 1 reduce/reduce
State 39 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Naredba ';' Program
    2        | Naredba ';'

    3 Naredba: int_token id_token '=' E
    4        | print_token '(' E ',' broj_token ')'
    5        | print_token '(' id_token ')'
    6        | print_token '(' L ')'
    7        | int_token id_token
    8        | list_token id_token '=' L
    9        | list_token id_token
   10        | id_token '=' E
   11        | id_token '=' L
   12        | E eq_token E
   13        | E neq_token E
   14        | E
   15        | L

   16 E: L '[' E ']'
   17  | E '+' E
   18  | E '-' E
   19  | E '*' E
   20  | E '/' E
   21  | E '&' E
   22  | E '|' E
   23  | E '^' E
   24  | E shl_token E
   25  | E shr_token E
   26  | '-' E
   27  | '~' E
   28  | '(' E ')'
   29  | id_token
   30  | broj_token

   31 L: '[' Lista_brojeva ']'
   32  | id_token

   33 Lista_brojeva: Lista_brojeva ',' E
   34              | E


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 21
    '(' (40) 4 5 6 28
    ')' (41) 4 5 6 28
    '*' (42) 19
    '+' (43) 17
    ',' (44) 4 33
    '-' (45) 18 26
    '/' (47) 20
    ';' (59) 1 2
    '=' (61) 3 8 10 11
    '[' (91) 16 31
    ']' (93) 16 31
    '^' (94) 23
    '|' (124) 22
    '~' (126) 27
    error (256)
    print_token (258) 4 5 6
    list_token (259) 8 9
    int_token (260) 3 7
    eq_token (261) 12
    neq_token (262) 13
    shl_token (263) 24
    shr_token (264) 25
    broj_token <broj_type> (265) 4 30
    id_token <string_type> (266) 3 5 7 8 9 10 11 29 32
    UNMIN (267)


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    Program (29)
        on left: 1 2
        on right: 0 1
    Naredba (30)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15
        on right: 1 2
    E <broj_type> (31)
        on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
        on right: 3 4 10 12 13 14 16 17 18 19 20 21 22 23 24 25 26 27 28 33 34
    L <list_type> (32)
        on left: 31 32
        on right: 6 8 11 15 16
    Lista_brojeva <list_type> (33)
        on left: 33 34
        on right: 31 33


State 0

    0 $accept: . Program $end

    print_token  shift, and go to state 1
    list_token   shift, and go to state 2
    int_token    shift, and go to state 3
    broj_token   shift, and go to state 4
    id_token     shift, and go to state 5
    '-'          shift, and go to state 6
    '~'          shift, and go to state 7
    '('          shift, and go to state 8
    '['          shift, and go to state 9

    Program  go to state 10
    Naredba  go to state 11
    E        go to state 12
    L        go to state 13


State 1

    4 Naredba: print_token . '(' E ',' broj_token ')'
    5        | print_token . '(' id_token ')'
    6        | print_token . '(' L ')'

    '('  shift, and go to state 14


State 2

    8 Naredba: list_token . id_token '=' L
    9        | list_token . id_token

    id_token  shift, and go to state 15


State 3

    3 Naredba: int_token . id_token '=' E
    7        | int_token . id_token

    id_token  shift, and go to state 16


State 4

   30 E: broj_token .

    $default  reduce using rule 30 (E)


State 5

   10 Naredba: id_token . '=' E
   11        | id_token . '=' L
   29 E: id_token .
   32 L: id_token .

    '='  shift, and go to state 17

    ';'       reduce using rule 29 (E)
    ';'       [reduce using rule 32 (L)]
    '['       reduce using rule 32 (L)
    $default  reduce using rule 29 (E)


State 6

   26 E: '-' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 19
    L  go to state 20


State 7

   27 E: '~' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 21
    L  go to state 20


State 8

   28 E: '(' . E ')'

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 22
    L  go to state 20


State 9

   31 L: '[' . Lista_brojeva ']'

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E              go to state 23
    L              go to state 20
    Lista_brojeva  go to state 24


State 10

    0 $accept: Program . $end

    $end  shift, and go to state 25


State 11

    1 Program: Naredba . ';' Program
    2        | Naredba . ';'

    ';'  shift, and go to state 26


State 12

   12 Naredba: E . eq_token E
   13        | E . neq_token E
   14        | E .
   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E

    eq_token   shift, and go to state 27
    neq_token  shift, and go to state 28
    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '+'        shift, and go to state 31
    '-'        shift, and go to state 32
    '*'        shift, and go to state 33
    '/'        shift, and go to state 34
    '&'        shift, and go to state 35
    '|'        shift, and go to state 36
    '^'        shift, and go to state 37

    $default  reduce using rule 14 (Naredba)


State 13

   15 Naredba: L .
   16 E: L . '[' E ']'

    '['  shift, and go to state 38

    $default  reduce using rule 15 (Naredba)


State 14

    4 Naredba: print_token '(' . E ',' broj_token ')'
    5        | print_token '(' . id_token ')'
    6        | print_token '(' . L ')'

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 39
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 40
    L  go to state 41


State 15

    8 Naredba: list_token id_token . '=' L
    9        | list_token id_token .

    '='  shift, and go to state 42

    $default  reduce using rule 9 (Naredba)


State 16

    3 Naredba: int_token id_token . '=' E
    7        | int_token id_token .

    '='  shift, and go to state 43

    $default  reduce using rule 7 (Naredba)


State 17

   10 Naredba: id_token '=' . E
   11        | id_token '=' . L

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 44
    L  go to state 45


State 18

   29 E: id_token .
   32 L: id_token .

    ';'       reduce using rule 29 (E)
    ';'       [reduce using rule 32 (L)]
    '['       reduce using rule 32 (L)
    $default  reduce using rule 29 (E)


State 19

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E
   26  | '-' E .

    $default  reduce using rule 26 (E)


State 20

   16 E: L . '[' E ']'

    '['  shift, and go to state 38


State 21

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E
   27  | '~' E .

    $default  reduce using rule 27 (E)


State 22

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E
   28  | '(' E . ')'

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '+'        shift, and go to state 31
    '-'        shift, and go to state 32
    '*'        shift, and go to state 33
    '/'        shift, and go to state 34
    '&'        shift, and go to state 35
    '|'        shift, and go to state 36
    '^'        shift, and go to state 37
    ')'        shift, and go to state 46


State 23

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E
   34 Lista_brojeva: E .

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '+'        shift, and go to state 31
    '-'        shift, and go to state 32
    '*'        shift, and go to state 33
    '/'        shift, and go to state 34
    '&'        shift, and go to state 35
    '|'        shift, and go to state 36
    '^'        shift, and go to state 37

    $default  reduce using rule 34 (Lista_brojeva)


State 24

   31 L: '[' Lista_brojeva . ']'
   33 Lista_brojeva: Lista_brojeva . ',' E

    ','  shift, and go to state 47
    ']'  shift, and go to state 48


State 25

    0 $accept: Program $end .

    $default  accept


State 26

    1 Program: Naredba ';' . Program
    2        | Naredba ';' .

    print_token  shift, and go to state 1
    list_token   shift, and go to state 2
    int_token    shift, and go to state 3
    broj_token   shift, and go to state 4
    id_token     shift, and go to state 5
    '-'          shift, and go to state 6
    '~'          shift, and go to state 7
    '('          shift, and go to state 8
    '['          shift, and go to state 9

    $default  reduce using rule 2 (Program)

    Program  go to state 49
    Naredba  go to state 11
    E        go to state 12
    L        go to state 13


State 27

   12 Naredba: E eq_token . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 50
    L  go to state 20


State 28

   13 Naredba: E neq_token . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 51
    L  go to state 20


State 29

   24 E: E shl_token . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 52
    L  go to state 20


State 30

   25 E: E shr_token . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 53
    L  go to state 20


State 31

   17 E: E '+' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 54
    L  go to state 20


State 32

   18 E: E '-' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 55
    L  go to state 20


State 33

   19 E: E '*' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 56
    L  go to state 20


State 34

   20 E: E '/' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 57
    L  go to state 20


State 35

   21 E: E '&' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 58
    L  go to state 20


State 36

   22 E: E '|' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 59
    L  go to state 20


State 37

   23 E: E '^' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 60
    L  go to state 20


State 38

   16 E: L '[' . E ']'

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 61
    L  go to state 20


State 39

    5 Naredba: print_token '(' id_token . ')'
   29 E: id_token .
   32 L: id_token .

    ')'  shift, and go to state 62

    ')'       [reduce using rule 32 (L)]
    '['       reduce using rule 32 (L)
    $default  reduce using rule 29 (E)


State 40

    4 Naredba: print_token '(' E . ',' broj_token ')'
   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '+'        shift, and go to state 31
    '-'        shift, and go to state 32
    '*'        shift, and go to state 33
    '/'        shift, and go to state 34
    '&'        shift, and go to state 35
    '|'        shift, and go to state 36
    '^'        shift, and go to state 37
    ','        shift, and go to state 63


State 41

    6 Naredba: print_token '(' L . ')'
   16 E: L . '[' E ']'

    ')'  shift, and go to state 64
    '['  shift, and go to state 38


State 42

    8 Naredba: list_token id_token '=' . L

    id_token  shift, and go to state 65
    '['       shift, and go to state 9

    L  go to state 66


State 43

    3 Naredba: int_token id_token '=' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 67
    L  go to state 20


State 44

   10 Naredba: id_token '=' E .
   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '+'        shift, and go to state 31
    '-'        shift, and go to state 32
    '*'        shift, and go to state 33
    '/'        shift, and go to state 34
    '&'        shift, and go to state 35
    '|'        shift, and go to state 36
    '^'        shift, and go to state 37

    $default  reduce using rule 10 (Naredba)


State 45

   11 Naredba: id_token '=' L .
   16 E: L . '[' E ']'

    '['  shift, and go to state 38

    $default  reduce using rule 11 (Naredba)


State 46

   28 E: '(' E ')' .

    $default  reduce using rule 28 (E)


State 47

   33 Lista_brojeva: Lista_brojeva ',' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 68
    L  go to state 20


State 48

   31 L: '[' Lista_brojeva ']' .

    $default  reduce using rule 31 (L)


State 49

    1 Program: Naredba ';' Program .

    $default  reduce using rule 1 (Program)


State 50

   12 Naredba: E eq_token E .
   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '+'        shift, and go to state 31
    '-'        shift, and go to state 32
    '*'        shift, and go to state 33
    '/'        shift, and go to state 34
    '&'        shift, and go to state 35
    '|'        shift, and go to state 36
    '^'        shift, and go to state 37

    $default  reduce using rule 12 (Naredba)


State 51

   13 Naredba: E neq_token E .
   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '+'        shift, and go to state 31
    '-'        shift, and go to state 32
    '*'        shift, and go to state 33
    '/'        shift, and go to state 34
    '&'        shift, and go to state 35
    '|'        shift, and go to state 36
    '^'        shift, and go to state 37

    $default  reduce using rule 13 (Naredba)


State 52

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   24  | E shl_token E .
   25  | E . shr_token E

    $default  reduce using rule 24 (E)


State 53

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E
   25  | E shr_token E .

    $default  reduce using rule 25 (E)


State 54

   17 E: E . '+' E
   17  | E '+' E .
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '*'        shift, and go to state 33
    '/'        shift, and go to state 34
    '&'        shift, and go to state 35
    '|'        shift, and go to state 36
    '^'        shift, and go to state 37

    $default  reduce using rule 17 (E)


State 55

   17 E: E . '+' E
   18  | E . '-' E
   18  | E '-' E .
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '*'        shift, and go to state 33
    '/'        shift, and go to state 34
    '&'        shift, and go to state 35
    '|'        shift, and go to state 36
    '^'        shift, and go to state 37

    $default  reduce using rule 18 (E)


State 56

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   19  | E '*' E .
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '&'        shift, and go to state 35
    '|'        shift, and go to state 36
    '^'        shift, and go to state 37

    $default  reduce using rule 19 (E)


State 57

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   20  | E '/' E .
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '&'        shift, and go to state 35
    '|'        shift, and go to state 36
    '^'        shift, and go to state 37

    $default  reduce using rule 20 (E)


State 58

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   21  | E '&' E .
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '|'        shift, and go to state 36
    '^'        shift, and go to state 37

    $default  reduce using rule 21 (E)


State 59

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   22  | E '|' E .
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '^'        shift, and go to state 37

    $default  reduce using rule 22 (E)


State 60

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   23  | E '^' E .
   24  | E . shl_token E
   25  | E . shr_token E

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30

    $default  reduce using rule 23 (E)


State 61

   16 E: L '[' E . ']'
   17  | E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '+'        shift, and go to state 31
    '-'        shift, and go to state 32
    '*'        shift, and go to state 33
    '/'        shift, and go to state 34
    '&'        shift, and go to state 35
    '|'        shift, and go to state 36
    '^'        shift, and go to state 37
    ']'        shift, and go to state 69


State 62

    5 Naredba: print_token '(' id_token ')' .

    $default  reduce using rule 5 (Naredba)


State 63

    4 Naredba: print_token '(' E ',' . broj_token ')'

    broj_token  shift, and go to state 70


State 64

    6 Naredba: print_token '(' L ')' .

    $default  reduce using rule 6 (Naredba)


State 65

   32 L: id_token .

    $default  reduce using rule 32 (L)


State 66

    8 Naredba: list_token id_token '=' L .

    $default  reduce using rule 8 (Naredba)


State 67

    3 Naredba: int_token id_token '=' E .
   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '+'        shift, and go to state 31
    '-'        shift, and go to state 32
    '*'        shift, and go to state 33
    '/'        shift, and go to state 34
    '&'        shift, and go to state 35
    '|'        shift, and go to state 36
    '^'        shift, and go to state 37

    $default  reduce using rule 3 (Naredba)


State 68

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '&' E
   22  | E . '|' E
   23  | E . '^' E
   24  | E . shl_token E
   25  | E . shr_token E
   33 Lista_brojeva: Lista_brojeva ',' E .

    shl_token  shift, and go to state 29
    shr_token  shift, and go to state 30
    '+'        shift, and go to state 31
    '-'        shift, and go to state 32
    '*'        shift, and go to state 33
    '/'        shift, and go to state 34
    '&'        shift, and go to state 35
    '|'        shift, and go to state 36
    '^'        shift, and go to state 37

    $default  reduce using rule 33 (Lista_brojeva)


State 69

   16 E: L '[' E ']' .

    $default  reduce using rule 16 (E)


State 70

    4 Naredba: print_token '(' E ',' broj_token . ')'

    ')'  shift, and go to state 71


State 71

    4 Naredba: print_token '(' E ',' broj_token ')' .

    $default  reduce using rule 4 (Naredba)
